kubernetes/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: echoheaders
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: echoheaders
    spec:
      containers:
      - name: echoserver
        image: gcr.io/liveramp-eng-ops-dev/echoheaders:0.0.1
        ports:
        - name: http
          containerPort: 8080
